# ToDo-web-app

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: _build_and_push.yaml  _pytest.yaml  _ruff.yaml  build_and_push.yaml  pytest.yaml  release.yaml
bot/: admin.py  models.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_options.py
bot/tg/: client.py  schemas.py
core/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
deploy/: docker-compose.yaml
diplom/: asgi.py  settings.py  urls.py  wsgi.py
goals/: admin.py  apps.py  choices.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goal_is_deleted.py  0004_alter_goal_options_remove_goal_is_deleted_and_more.py  0005_rename_update_goal_updated_and_more.py  0006_board_alter_goal_description_goalcategory_board_and_more.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py  0009_remove_boardparticipant_title.py
goals/views/: boards.py  categories.py  comments.py  goals.py
tests/: conftest.py  factories.py  test_core.py
tests/test_goals/: factories.py  test_boards.py  test_goals.py
todolist/: settings.py  urls.py
