[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["danilu <danilu2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
