[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["danilu <danilu2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
serializers = "^0.2.4"
social-auth-app-django = "^5.2.0"
django-filter = "^23.2"
pydantic = ">=1.10,<2.0"
pytest = "^7.4.0"
drf-spectacular = "^0.26.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
django-extensions = "^3.2.3"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = true
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | migrations
)/
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["B", "E", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  'migrations',
  '.mypy_cache',
]

line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
combine_as_imports = true
combine_star = true
skip_glob = '''
  .git,
  .mypy_cache,
  .venv,
  migrations
'''
